--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <div class="logo"><a href=''>KEANTECH</a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#spek">Spesifikasi</a></li>
-                    <li><a href="#social">Sosial Media</a></li>
-                    <li><a href="#contact">Kontak</a></li>
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#spek">SPESIFIKASI</a></li>
+                    <li><a href="#social">SOSIAL MEDIA</a></li>
+                    <li><a href="#contact">KONTAK</a></li>
                 </ul>
             </div>
         </div>
@@ -52,7 +52,9 @@
                     </tr>
                     <tr>
                         <td>CPU</td>
-                        <td>Octa-core (2×2.2 GHz Kryo 460 Gold & 6×1.7 GHz Kryo 460 Silver)</td>
+                        <td>Octa-core (2×2.2 GHz Kryo 460 Gold & 6×1.7 GHz Kryo 460 Silver)
+                            <br>8 core, 64-bit ARMv8-A
+                        </td>
                     </tr>
                     <tr>
                         <td>GPU</td>
@@ -146,15 +148,15 @@
                 <div class="social-list">
                     <div class="kartu-social">
                         <img src="resource/IG.png"/>
-                        <p>Instagram</p>
+                        <p><a href="https://instagram.com/adkeant933?igshid=OGQ5ZDc2ODk2ZA==" class="tbl-sosmed">Instagram</a> </p>
                     </div>
                     <div class="kartu-social">
                         <img src="resource/FB.png"/>
-                        <p>Facebook</p>
+                        <p><a href="https://www.facebook.com/diki.eka.5015?mibextid=ZbWKwL" class="tbl-sosmed">Facebook</a></p>
                     </div>
                     <div class="kartu-social">
                         <img src="resource/WA.png"/>
-                        <p>Whatsapp</p>
+                        <p><a href="https://wa.me/qr/XMAKFWKQ4FAJN1" class="tbl-sosmed">Whatsapp</a></p>
                     </div>
                 </div>
             </div>
@@ -166,7 +168,7 @@
             <div class="footer">
                 <div class="footer-section">
                     <h4>Keantech</h4>
-                    <p>Adalah website blog yang mereview gadget</p>
+                    <p>website blog review gadget</p>
                 </div>
                 <div class="footer-section">
                     <h4>Spesifikasi</h4>
