--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href=''>KEANTECH</a></div>
+            <div class="logo"><a href=''>KeanTech</a></div>
             <div class="menu">
                 <ul>
                     <li><a href="#home">HOME</a></li>
@@ -18,6 +18,9 @@
                     <li><a href="#social">SOSIAL MEDIA</a></li>
                     <li><a href="#contact">KONTAK</a></li>
                 </ul>
+            </div>
+            <div>
+                
             </div>
         </div>
      </nav>
@@ -37,7 +40,10 @@
 
         <section id="spek">
             <div class="spesifikasi">
-                <h3>Tabel Spesifikasi Redmi Note 10</h3>
+                <h3>Tabel Spesifikasi 
+                <br>Redmi Note 10
+                </h3>
+               
             <table>
                 <thead>
                     <tr>
@@ -58,15 +64,21 @@
                     </tr>
                     <tr>
                         <td>GPU</td>
-                        <td>Adreno 612</td>
+                        <td>Adreno 612
+                            <br>V.openGL ES 3.2
+                        </td>
                     </tr>
                     <tr>
                         <td>RAM</td>
-                        <td>4/6GB DDR4 RAM</td>
+                        <td>4/6GB RAM
+                            <br>Type LPDDR4X (Speed 3200-4267 MT/s)
+                        </td>
                     </tr>
                     <tr>
                         <td>ROM</td>
-                        <td>64GB/128GB UFS 2.1</td>
+                        <td>64GB/128GB UFS 2.1
+                            <br>(Speed read 860 MB/s, Write 255 MB/s)
+                        </td>
                     </tr>
                     <tr>
                         <td>Memori Eksternal</td>
