--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
                     <div class="kartu-social">
                         <img src="resource/WA.png"/>
-                        <p><a href="https://wa.me/qr/XMAKFWKQ4FAJN1" class="tbl-sosmed">Whatsapp</a></p>
+                        <p><a href="" class="tbl-sosmed">Whatsapp</a></p>
                     </div>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                     <h4>Sosmed</h4>
                     <p>
                         Github : Adkeant
-                        <br>WA : 0857-3267-4201
+                        <br>WA : -
                         <br>IG : Adkeant933
                     </p>
                  </div>
