--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <h2>Materi Arsikom</h2>
                         <p>Rangkuman materi arsikom semester 1 mulai dari pertemuan pertama sampai ke-7 yang berisi tentang penjelasan mengenai CPU (Alu & Register), Gate, Transistor semikonduktor, memori, penjelasan data, Dasar bahasa pemrograman, Dan pengertian mengenai Compiler, Interpreter serta Linker
                         </p>
-                        <p><a href="pdf/Tugas 9 Program Konversi Suhu 1B (Asfahanny Diki E) (1).pdf" class="tbl-cyan">Lihat Selengkapnya</a>   
-                            <a href="pdf/Tugas 9 Program Konversi Suhu 1B (Asfahanny Diki E) (1).pdf" class="tbl-pink" download>Unduh</a></p>
+                        <p><a href="pdf/Rangkuman.pdf" class="tbl-cyan">Lihat Selengkapnya</a>   
+                            <a href="pdf/Rangkuman.pdf" class="tbl-pink" download>Unduh</a></p>
                     </div>
                     <img src="resource/spek2.png"/>
                 </section>
