--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 
             <div class="wrapper">
                <section id="content">
-                   <div class="img1">
                    <img src="resource/spek.png"/>
-               </div>
+               
                    <div class="kolom">
                        <p class="deskripsi">Spesifikasi</p>
                        <h2>Devices</h2>
@@ -57,8 +56,6 @@
 
                <div class="wrapper">
                 <section id="content">
-                    <div class="img1">
-                </div>
                     <div class="kolom2">
                         <p class="deskripsi">Rangkuman</p>
                         <h2>Materi Arsikom</h2>
@@ -103,7 +100,7 @@
             <div class="footer">
                 <div class="footer-section">
                     <h4>Keantech</h4>
-                    <p>Ini adalah website pribadi saya untuk bahan uji coba dalam belajar pengembangan website, jadi kalau ada kurangnya mohon dimaklumi</p>
+                    <p>Ini adalah website pribadi saya untuk bahan uji coba dalam belajar pengembangan website, jadi kalau ada kurangnya mohon dimaklumi (belum suport tampilan mobile)</p>
                 </div>
                 <div class="footer-section">
                     <h4>Tentang Saya</h4>
